changes in gallery and about page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -124,13 +124,13 @@
                         <div class="property-grid-1 property-block bg-white transation-this hover-shadow ">
                             <div
                                 class="overflow-hidden position-relative transation thumbnail-img bg-secondary hover-img-zoom">
-                                <a><img src="assets/assets/images/city/1601994595_shutterstock_15985529.webp"
+                                <a><img src="../../assets/assets/images/team/1.jpg"
                                         alt="Image Not Found!"></a>
                             </div>
                             <div class="property_text p-4">
-                                <h5 class="listing-title"><a><b>fewrfwefrwe</b></a>
+                                <h5 class="listing-title"><a><b>Anushka Sharma</b></a>
                                 </h5>
-                                <span class="listing-location"><i class="fas fa-map-marker-alt"></i> fwefwef </span>
+                                <span class="listing-location"><i class="fas fa-map-marker-alt"></i> Senior Sales Executive </span>
                             </div>
 
                         </div>
@@ -140,13 +140,13 @@
                         <div class="property-grid-1 property-block bg-white transation-this hover-shadow ">
                             <div
                                 class="overflow-hidden position-relative transation thumbnail-img bg-secondary hover-img-zoom">
-                                <a><img src="assets/assets/images/city/1601994595_shutterstock_15985529.webp"
+                                <a><img src="../../assets/assets/images/team/2.jpg"
                                         alt="Image Not Found!"></a>
                             </div>
                             <div class="property_text p-4">
-                                <h5 class="listing-title"><a><b>fewrfwefrwe</b></a>
+                                <h5 class="listing-title"><a><b>Virat Kohli</b></a>
                                 </h5>
-                                <span class="listing-location"><i class="fas fa-map-marker-alt"></i> fwefwef </span>
+                                <span class="listing-location"><i class="fas fa-map-marker-alt"></i> Sales Coordinator </span>
                             </div>
 
                         </div>
@@ -156,13 +156,13 @@
                         <div class="property-grid-1 property-block bg-white transation-this hover-shadow ">
                             <div
                                 class="overflow-hidden position-relative transation thumbnail-img bg-secondary hover-img-zoom">
-                                <a><img src="assets/assets/images/city/1601994595_shutterstock_15985529.webp"
+                                <a><img src="../../assets/assets/images/team/3.jpg"
                                         alt="Image Not Found!"></a>
                             </div>
                             <div class="property_text p-4">
-                                <h5 class="listing-title"><a><b>fewrfwefrwe</b></a>
+                                <h5 class="listing-title"><a><b>Nita Ambani</b></a>
                                 </h5>
-                                <span class="listing-location"><i class="fas fa-map-marker-alt"></i> fwefwef </span>
+                                <span class="listing-location"><i class="fas fa-map-marker-alt"></i> Sales Associate </span>
                             </div>
 
                         </div>
@@ -172,13 +172,13 @@
                         <div class="property-grid-1 property-block bg-white transation-this hover-shadow ">
                             <div
                                 class="overflow-hidden position-relative transation thumbnail-img bg-secondary hover-img-zoom">
-                                <a><img src="assets/assets/images/city/1601994595_shutterstock_15985529.webp"
+                                <a><img src="../../assets/assets/images/team/4.jpg"
                                         alt="Image Not Found!"></a>
                             </div>
                             <div class="property_text p-4">
-                                <h5 class="listing-title"><a><b>fewrfwefrwe</b></a>
+                                <h5 class="listing-title"><a><b>Mukesh Ambani</b></a>
                                 </h5>
-                                <span class="listing-location"><i class="fas fa-map-marker-alt"></i> fwefwef </span>
+                                <span class="listing-location"><i class="fas fa-map-marker-alt"></i>  Sales Associate </span>
                             </div>
 
                         </div>
