--- a/src/app/property-detail/property-detail.component.html
+++ b/src/app/property-detail/property-detail.component.html
@@ -6,8 +6,8 @@
                 <nav aria-label="breadcrumb" class="mb-2">
                     <ol class="breadcrumb mb-0 bg-transparent p-0">
                         <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
-                        <li class="breadcrumb-item"><a routerLink="/listing">Property</a></li>
-                        <li class="breadcrumb-item active text-primary" aria-current="page">Property Detail</li>
+                        <li class="breadcrumb-item"><a routerLink="/listing">Listing</a></li>
+                        <li class="breadcrumb-item active text-primary" aria-current="page">Project Detail</li>
                     </ol>
                 </nav>
                 <h3 class="text-secondary">{{propertyData?.property_name}}</h3>
@@ -22,7 +22,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div id="single-property" style="width:1200px; height:600px; margin:0 auto 30px;">
+                <div id="single-property" style="width:1200px; height:500px; margin:0 auto 30px;">
                     <!-- Slide 1-->
                     <div *ngFor="let item of propertyData?.property_image" class="ls-slide" data-ls="duration:7500; transition2d:5; kenburnszoom:in; kenburnsscale:1.2;">
                         <img width="1920" height="1280" src="{{baseUrl}}{{item?.path}}" class="ls-bg"
