--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,5 @@
 <!--============== Page Banner Start ==============-->
-<div class="page-banner-simple bg-secondary py-40 mt-5">
+<div class="page-banner-simple bg-secondary py-40" id="banner">
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
