--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,5 @@
 <!--============== Page Banner Start ==============-->
-<div class="page-banner-simple mt-5 bg-secondary py-40"
+<div class="page-banner-simple bg-secondary py-40" id="banner"
     style="background-image: url(../../assets/assets/images/background/bg-4.png); background-repeat: no-repeat; background-position: center center; background-size: cover;">
     <div class="container">
         <div class="row">
