--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,8 +5,8 @@
             <div class="col">
                 <div class="footer-widget mb-4">
                     <div class="footer-logo mb-4">
-                        <a><img src="assets/assets/images/logo/logo-full-white.png"
-                                alt="Image not found!" /></a>
+                        <a><img src="../../assets/assets/images/logo/Color logo - no background.png"
+                                alt="Image not found!" style="width: 150px;" /></a>
                     </div>
                     <p>Explore handpicked properties perfectly suited to your needs through our straightforward sales process.</p>
                 </div>
