--- a/src/app/property-detail/property-detail.component.html
+++ b/src/app/property-detail/property-detail.component.html
@@ -1,5 +1,5 @@
 <!--============== Page title Start ==============-->
-<div class="full-row py-5 mt-5">
+<div class="full-row py-5" id="banner">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
