--- a/src/app/agent-detail/agent-detail.component.html
+++ b/src/app/agent-detail/agent-detail.component.html
@@ -1,5 +1,5 @@
 <!--============== Page title Start ==============-->
-<div class="full-row mt-5 py-5 bg-light">
+<div class="full-row py-5 bg-light" id="banner">
     <div class="container">
         <div class="row">
             <div class="col inner-page-banner">
