--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,5 +1,5 @@
 <!--============== Page Banner Start ==============-->
-<div class="page-banner-simple bg-secondary py-40" id="banner"
+<div class="page-banner-simple bg-secondary py-40 mt-xl-5 mt-md-2 mt-2"
     style="background-image: url(../../assets/assets/images/background/photoBG.jpg); background-repeat: no-repeat; background-position: center center; background-size: cover;">
     <div class="container">
         <div class="row">
