--- a/src/app/property-detail/property-detail.component.html
+++ b/src/app/property-detail/property-detail.component.html
@@ -1,5 +1,5 @@
 <!--============== Page title Start ==============-->
-<div class="full-row py-5" id="banner">
+<div class="full-row py-5 mt-xl-5 mt-md-2 mt-2">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
