--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,8 +7,8 @@
                                         <nav
                                                 class="navbar navbar-expand-lg nav-white nav-primary-hover nav-line-active">
                                                 <a class="navbar-brand" routerLink="/"><img class="nav-logo"
-                                                                src="../../assets/assets/images/logo/White logo - no background.png"
-                                                                alt="Image not found !" style="width: 200px;"></a>
+                                                                src="../../assets/assets/images/logo/default-monochrome-white2.svg"
+                                                                alt="Image not found !"></a>
                                                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                                                         data-bs-target="#navbarSupportedContent"
                                                         aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -54,7 +54,7 @@
                 <div class="row">
                     <div class="col">
                         <nav class="navbar navbar-expand-lg nav-secondary nav-primary-hover nav-line-active">
-                            <a class="navbar-brand" routerLink="/"><img class="nav-logo" src="../../assets/assets/images/logo/Black logo - no background.png" alt="Image not found !" style="width: 200px;"></a>
+                            <a class="navbar-brand" routerLink="/"><img class="nav-logo" src="../../assets/assets/images/logo/default-monochrome-black2.svg" alt="Image not found !"></a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon flaticon-menu flat-small text-primary"></span>
                               </button>
