--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -124,7 +124,7 @@
                         <div class="property-grid-1 property-block bg-white transation-this hover-shadow ">
                             <div
                                 class="overflow-hidden position-relative transation thumbnail-img bg-secondary hover-img-zoom">
-                                <a><img src="../../assets/assets/images/team/1.jpg"
+                                <a><img src="assets/assets/images/team/1.jpg"
                                         alt="Image Not Found!"></a>
                             </div>
                             <div class="property_text p-4">
@@ -140,7 +140,7 @@
                         <div class="property-grid-1 property-block bg-white transation-this hover-shadow ">
                             <div
                                 class="overflow-hidden position-relative transation thumbnail-img bg-secondary hover-img-zoom">
-                                <a><img src="../../assets/assets/images/team/2.jpg"
+                                <a><img src="assets/assets/images/team/2.jpg"
                                         alt="Image Not Found!"></a>
                             </div>
                             <div class="property_text p-4">
@@ -156,7 +156,7 @@
                         <div class="property-grid-1 property-block bg-white transation-this hover-shadow ">
                             <div
                                 class="overflow-hidden position-relative transation thumbnail-img bg-secondary hover-img-zoom">
-                                <a><img src="../../assets/assets/images/team/3.jpg"
+                                <a><img src="assets/assets/images/team/3.jpg"
                                         alt="Image Not Found!"></a>
                             </div>
                             <div class="property_text p-4">
@@ -172,7 +172,7 @@
                         <div class="property-grid-1 property-block bg-white transation-this hover-shadow ">
                             <div
                                 class="overflow-hidden position-relative transation thumbnail-img bg-secondary hover-img-zoom">
-                                <a><img src="../../assets/assets/images/team/4.jpg"
+                                <a><img src="assets/assets/images/team/4.jpg"
                                         alt="Image Not Found!"></a>
                             </div>
                             <div class="property_text p-4">
@@ -198,8 +198,8 @@
         <div class="row">
             <div class="col-lg-4">
                 <div class="md-mb-30">
-                    <span class="tagline-2 text-primary">Awards & Honors</span>
-                    <h2 class="text-secondary mb-0">Awards</h2>
+                    <span class="tagline-2 text-primary">Our Production</span>
+                    <h2 class="text-secondary mb-0">Houses</h2>
                 </div>
             </div>
             <div class="col-lg-8">
