--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,6 +1,6 @@
 <!--============== Page Banner Start ==============-->
 <div class="page-banner-simple bg-secondary py-40 mt-xl-5 mt-md-2 mt-2"
-    style="background-image: url(../../assets/assets/images/background/photoBG.jpg); background-repeat: no-repeat; background-position: center center; background-size: cover;">
+    style="background-image: url(assets/assets/images/background/photoBG.jpg); background-repeat: no-repeat; background-position: center center; background-size: cover;">
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
