--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
                                         <nav
                                                 class="navbar navbar-expand-lg nav-white nav-primary-hover nav-line-active">
                                                 <a class="navbar-brand" routerLink="/"><img class="nav-logo"
-                                                                src="../../assets/assets/images/logo/default-monochrome-white2.svg"
+                                                                src="assets/assets/images/logo/default-monochrome-white2.svg"
                                                                 alt="Image not found !"></a>
                                                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                                                         data-bs-target="#navbarSupportedContent"
@@ -18,25 +18,23 @@
                                                 </button>
                                                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                                         <ul class="navbar-nav ms-auto">
-                                                                <li class="nav-item" routerLinkActive="active">
-                                                                        <a class="nav-link" routerLink="/">Home</a>
+                                                                <li class="nav-item">
+                                                                    <a class="nav-link" routerLink="/">Home</a>
                                                                 </li>
-                                                                <li class="nav-item" routerLinkActive="active">
-                                                                        <a class="nav-link" routerLink="/about">About Us</a>
+                                                                <li class="nav-item">
+                                                                    <a class="nav-link" routerLink="/about">About Us</a>
                                                                 </li>
-                                                                <!-- <li class="nav-item" routerLinkActive="active">
-                                                                        <a class="nav-link" routerLink="/listing">Listing</a>
-                                                                </li> -->
-                                                                <li class="nav-item" routerLinkActive="active">
-                                                                        <a class="nav-link" routerLink="/contact">Contact Us</a>
+                                                                <li class="nav-item">
+                                                                    <a class="nav-link" routerLink="/contact">Contact Us</a>
                                                                 </li>
-                                                                <li class="nav-item" routerLinkActive="active">
-                                                                        <a class="nav-link" routerLink="/gallery">Gallery</a>
+                                                                <li class="nav-item">
+                                                                    <a class="nav-link" routerLink="/gallery">Gallery</a>
                                                                 </li>
-                                                                <li class="nav-item" routerLinkActive="active">
-                                                                        <a class="nav-link" routerLink="/career">Career</a>
+                                                                <li class="nav-item">
+                                                                    <a class="nav-link" routerLink="/career">Career</a>
                                                                 </li>
-                                                        </ul>
+                                                            </ul>
+                                                            
                                                 </div>
                                         </nav>
                                 </div>
@@ -54,7 +52,7 @@
                 <div class="row">
                     <div class="col">
                         <nav class="navbar navbar-expand-lg nav-secondary nav-primary-hover nav-line-active">
-                            <a class="navbar-brand" routerLink="/"><img class="nav-logo" src="../../assets/assets/images/logo/default-monochrome-black2.svg" alt="Image not found !"></a>
+                            <a class="navbar-brand" routerLink="/"><img class="nav-logo" src="assets/assets/images/logo/default-monochrome-black2.svg" alt="Image not found !"></a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon flaticon-menu flat-small text-primary"></span>
                               </button>
@@ -66,9 +64,6 @@
                                         <li class="nav-item" routerLinkActive="active">
                                                 <a class="nav-link" routerLink="/about">About Us</a>
                                         </li>
-                                        <!-- <li class="nav-item" routerLinkActive="active">
-                                                <a class="nav-link" routerLink="/listing">Listing</a>
-                                        </li> -->
                                         <li class="nav-item" routerLinkActive="active">
                                                 <a class="nav-link" routerLink="/contact">Contact Us</a>
                                         </li>
